--- a/package.json
+++ b/package.json
@@ -40,5 +40,16 @@
     "q": "^1.5.0",
     "truffle-contract": "^2.0.0",
     "web3": "^0.18.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/noman-land/relike-utils.git"
+  },
+  "keywords": [
+    "ethereum"
+  ],
+  "bugs": {
+    "url": "https://github.com/noman-land/relike-utils/issues"
+  },
+  "homepage": "https://github.com/noman-land/relike-utils#readme"
 }
