--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "relike-utils",
   "version": "0.1.0",
   "description": "Javascript library for interacting with the ReLike universal liking service.",
-  "main": "build/index.js",
-  "files": [
-    "./build/index.js",
-    "./build/contracts/"
-  ],
+  "main": "index.js",
+  "files": [ "build/index.js" ],
   "scripts": {
     "lint": "eslint ./",
     "build": "webpack",
