--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "classnames": "^2.2.5",
     "immutable": "^3.8.1",
     "q": "^1.5.0",
+    "redux-actions": "^2.2.1",
     "truffle-contract": "^2.0.0",
     "web3": "^0.18.4"
   },
